syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "MarkNextChangesetRanSqlProto";

package liquibase;

service MarkNextChangesetRanSqlService {
  rpc execute(MarkNextChangesetRanSqlRequest) returns (Response) {}
}

/* Writes the SQL used to mark the next change you apply as executed in your database */
message MarkNextChangesetRanSqlRequest {
  string changelog_file = 1; // *required* The root changelog file
  optional string context_filter = 2; // Context string to use for filtering
  optional string default_catalog_name = 3; // The default catalog name to use for the database connection
  optional string default_schema_name = 4; // The default schema name to use for the database connection
  optional string driver = 5; // The JDBC driver class
  optional string driver_properties_file = 6; // The JDBC driver properties file
  optional string label_filter = 7; // Label expression to use for filtering
  optional string password = 8; // Password to use to connect to the database
  string url = 9; // *required* The JDBC database connection URL
  optional string username = 10; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 11;
}

message Response {
  string message = 1;
}
